--- a/app/src/main/res/layout/fragment_face_detection_camera.xml
+++ b/app/src/main/res/layout/fragment_face_detection_camera.xml
@@ -13,5 +13,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
+    <com.gromyk.mlkit.GraphicOverlay
+            android:id="@+id/graphicOverlay"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignParentStart="true"
+            app:layout_constraintBottom_toBottomOf="@id/textureView"
+            app:layout_constraintLeft_toLeftOf="@id/textureView"
+            app:layout_constraintRight_toRightOf="@id/textureView"
+            app:layout_constraintTop_toTopOf="@id/textureView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
