--- a/app/src/main/res/layout/camera_controls_container.xml
+++ b/app/src/main/res/layout/camera_controls_container.xml
@@ -1,52 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright 2019 Google LLC
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     https://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
 <androidx.constraintlayout.widget.ConstraintLayout
-        tools:background="@color/colorAccent"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:background="@color/colorAccent"
         android:id="@+id/camera_ui_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools">
+        android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <!-- Camera control and gallery buttons -->
     <ImageButton
-            android:id="@+id/camera_switch_button"
+            android:id="@+id/cameraSwitchButton"
             android:layout_width="@dimen/round_button_medium"
             android:layout_height="@dimen/round_button_medium"
-            android:layout_marginBottom="96dp"
             android:padding="@dimen/spacing_small"
             android:scaleType="fitCenter"
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/ic_switch"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:contentDescription="@string/switch_camera_button_alt" android:layout_marginEnd="68dp"
-            app:layout_constraintEnd_toStartOf="@+id/camera_capture_button"/>
-
-    <ImageButton
-            android:id="@+id/camera_capture_button"
-            android:layout_width="@dimen/round_button_large"
-            android:layout_height="@dimen/round_button_large"
-            android:layout_marginBottom="@dimen/shutter_button_margin"
-            android:scaleType="fitCenter"
-            android:background="@drawable/ic_shutter"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:contentDescription="@string/capture_button_alt"/>
+            android:contentDescription="@string/switch_camera_button_alt"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.9"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
