--- a/app/src/main/res/layout/fragment_face_detection_camera.xml
+++ b/app/src/main/res/layout/fragment_face_detection_camera.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/viewContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -21,5 +22,6 @@
             app:layout_constraintBottom_toBottomOf="@id/textureView"
             app:layout_constraintLeft_toLeftOf="@id/textureView"
             app:layout_constraintRight_toRightOf="@id/textureView"
-            app:layout_constraintTop_toTopOf="@id/textureView" />
+            app:layout_constraintTop_toTopOf="@id/textureView"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
